[package]
name = "substrate-runtime"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[[bin]]
name = "substrate-runtime"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
executioner-core.workspace = true
executioner-host.workspace = true
executioner-sdk.workspace = true
executioner-worker.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
