[package]
name = "executioner-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
regex.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
uuid.workspace = true
wait-timeout.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
